# matrix

./: .gitignore  CMakeLists.txt  matrix.h
cmake/: MatrixDirs.cmake  add_unit_test.cmake
inc/: matrix.h
include/: matrix.h  matrix.hpp
src/: matrix.c  matrix.cpp
tests/: CMakeLists.txt  test_Matrix_copy.cpp  test_Matrix_equal.cpp  test_Matrix_getCol.cpp  test_Matrix_getRow.cpp  test_Matrix_getVal.cpp  test_Matrix_init.c  test_Matrix_init.cpp  test_Matrix_itranspose.cpp  test_Matrix_multiply.cpp  test_Matrix_normL2.cpp  test_Matrix_setCol.cpp  test_Matrix_setRow.cpp  test_Matrix_setVal.cpp  test_Matrix_transpose.cpp
